--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>React Slingshot</title>
+    <title>Book Trade</title>
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
